# churn_prediction-zrive

./: .gitignore  README.md  pyproject.toml
notebooks/: v1_dataset.ipynb  v3_feature_engineering.ipynb
src/: utils.py
